--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "tools/git2cl"]
 	path = tools/git2cl
-	url = http://repo.or.cz/r/git2cl.git
+	url = https://git.savannah.nongnu.org/git/git2cl.git
 [submodule "jimtcl"]
 	path = jimtcl
 	url = https://github.com/syntacore/jimtcl.git
